fixed issue with text overflowing in divs when using Jinja template. Added css word wrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,6 +27,9 @@ body {
     padding: 14px;
 }
 
+.row-fluid {
+    word-wrap: break-word;
+}
 
 /*------------------ Text Style ------------------*/
 .text-shadow {
